--- a/styles/style.css
+++ b/styles/style.css
@@ -215,6 +215,8 @@ a:hover {
     width: 40%;
 }
 
+
+
 /* meet feature styles  */
 .meet-feature {
     max-width: 1120px;
@@ -252,18 +254,23 @@ a:hover {
     margin-left: 2rem;
 }
 
+
+
+
+
+
 /* mobile reaponsive */
 @media screen and (max-width:576px) {
     nav ul {
         display: none;
     }
 
-    .bennar {
+    .bennar .run-section {
         flex-direction: column;
         gap: 1rem;
     }
 
-    .crad-container {
+    .crad-container .tainer-img-container {
         grid-template-columns: repeat(1, 1fr);
         gap: .5rem;
     }
@@ -277,6 +284,9 @@ a:hover {
 
     .crad-container img {
         width: 50%;
+    }
+    .run-section .btn-primary{
+        width: full;
     }
 
 }
