mobile divice margin aling commited

--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,9 @@ a:hover {
 
 /* mobile reaponsive */
 @media screen and (max-width:576px) {
+    *{
+        margin: 0 auto;
+    }
     nav ul {
         display: none;
     }
