--- a/styles/style.css
+++ b/styles/style.css
@@ -99,9 +99,12 @@ a:hover {
     background: rgb(230, 83, 60);
 }
 
+
+
+
 /* Bennar sectio style  */
 .bennar {
-    max-width: 1180px;
+    max-width: 1080px;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -119,7 +122,6 @@ a:hover {
 .bennar-content h1 {
     font-size: 4.8rem;
     font-weight: 900;
-
 }
 
 .bennar-content span {
@@ -136,7 +138,6 @@ a:hover {
 
 .img-content img {
     width: 100%;
-
 }
 
 .img-content {
@@ -147,29 +148,31 @@ a:hover {
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: .8rem;
-    width: 12rem;
-    height: 6rem;
+    width: 10rem;
+    height: 5rem;
     backdrop-filter: blur(20px);
     background: rgba(255, 255, 255, 0.1);
     position: absolute;
     top: 8rem;
-    left: 14rem;
-
+    left: 12rem;
 }
 
 .bennar-videos-content-2 {
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: .8rem;
-    width: 12rem;
-    height: 6rem;
+    width: 8rem;
+    height: 5rem;
     backdrop-filter: blur(20px);
     background: rgba(255, 255, 255, 0.1);
     position: absolute;
     bottom: 5rem;
-    left: -6rem;
+    left: -3rem;
     ;
 }
+
+
+
 
 /* habit section style  */
 .habit-section {
@@ -191,8 +194,10 @@ a:hover {
     margin-top: 6rem;
 }
 
-/* run-section styles */
 
+
+
+/* run-section styles */
 .run-section {
     max-width: 1080px;
     margin: 3rem auto;
@@ -214,8 +219,8 @@ a:hover {
 
 .run-img {
     width: 40%;
-
 }
+
 
 
 
@@ -230,7 +235,6 @@ a:hover {
     background: rgba(255, 255, 255, 0.1);
     border-radius: 1.1rem;
     margin-top: 2rem;
-
 }
 
 .tainer-img-container {
@@ -238,11 +242,11 @@ a:hover {
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
 }
-.tainer-img{
-    position: relative;
-    
 
+.tainer-img {
+    position: relative;
 }
+
 .tainer-img img {
     width: 100%;
     height: 18rem;
@@ -273,23 +277,71 @@ a:hover {
 
 
 
+/* footer section style  */
+footer{
+    background: rgba(255, 255, 255, 0.1);
+}
+.footer-container{
+    max-width: 1080px;
+    margin: 3rem auto;
+    display: flex;
+    justify-content: space-between;
+    padding-top: 3rem;
+}
+.footer-content{
+    width: 50%;
+}
+.footer-content h1{
+    color: rgb(230, 83, 60);
+    font-weight: 800;
+    font-size: 3.5rem;
+    font-style: italic;
+}
+.footer-content p{
+    line-height: 1.5rem;
+}
+.menu-container{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+}
+.menu-container ul{
+    padding-top: 2rem; 
+}
+.menu-container ul li{
+    list-style: none;
+    color: rgba(255, 255, 255, 0.4);
+    font-weight: 600;
+    font-size: 1.2rem;
+    line-height:  2rem;
+   margin-left: 1rem;
+}
+.disclaimer{
+    max-width: 1080px;
+    margin: 0 auto;
+    padding: 1.5rem;
+}
+
+
 
 
 /* mobile reaponsive */
 @media screen and (max-width:576px) {
-    *{
+    * {
         margin: 0 auto;
     }
+
     nav ul {
         display: none;
     }
 
-    .bennar {
+    .bennar .footer-container .menu-container {
         flex-direction: column;
         gap: 1rem;
     }
 
-    .crad-container {
+
+    .crad-container  {
         grid-template-columns: repeat(1, 1fr);
         gap: .5rem;
     }
@@ -306,6 +358,7 @@ a:hover {
     }
 
 
+
     .run-section {
         display: flex;
         flex-direction: column;
@@ -319,7 +372,6 @@ a:hover {
         font-weight: 600;
         border-radius: 2rem;
         background: rgb(230, 83, 60);
-
     }
 
     .run-img {
@@ -327,9 +379,16 @@ a:hover {
         margin-top: 2rem;
     }
 
+
+
     .tainer-img-container {
         grid-template-columns: repeat(1, 1fr);
-
+    }
+    .tainer-img img {
+        /* width: 100%; */
+        max-width: 20rem;
+        /* height: 18rem; */
+        /* border-radius: 1.1rem; */
     }
 
 }
