--- a/styles/style.css
+++ b/styles/style.css
@@ -305,6 +305,11 @@ footer{
     display: flex;
     justify-content: space-between;
 }
+.menu-title{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: rgb(255, 255, 255);
+}
 .menu-container ul{
     padding-top: 2rem; 
 }
@@ -314,7 +319,7 @@ footer{
     font-weight: 600;
     font-size: 1.2rem;
     line-height:  2rem;
-   margin-left: 1rem;
+   
 }
 .disclaimer{
     max-width: 1080px;
@@ -328,14 +333,14 @@ footer{
 /* mobile reaponsive */
 @media screen and (max-width:576px) {
     * {
-        margin: 0 auto;
+        padding: 0 .3rem;
     }
 
     nav ul {
         display: none;
     }
 
-    .bennar .footer-container .menu-container {
+    .bennar{
         flex-direction: column;
         gap: 1rem;
     }
@@ -385,10 +390,21 @@ footer{
         grid-template-columns: repeat(1, 1fr);
     }
     .tainer-img img {
-        /* width: 100%; */
-        max-width: 20rem;
+        width: 100%;
+        
         /* height: 18rem; */
         /* border-radius: 1.1rem; */
     }
 
+    .footer-container{
+        flex-direction: column;
+        gap: 2rem;
+        width: 100%;
+        /* padding: .2rem; */
+    }
+    .menu-container{
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+    }
 }
