--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,8 @@
     font-family: "Inter", sans-serif;
 }
 
+
+
 /* Share style  */
 .btn-primary {
     color: rgb(255, 255, 255);
@@ -102,7 +104,7 @@ a:hover {
 
 
 
-/* Bennar sectio style  */
+/* Bennar section style  */
 .bennar {
     max-width: 1080px;
     margin: 0 auto;
@@ -223,6 +225,89 @@ a:hover {
 
 
 
+/* bmi section styles */
+.bmi-section {
+    background: rgb(34, 34, 34);
+    margin-top: 5rem;
+}
+
+.bmi-container {
+    max-width: 1080px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.bmi-table {
+    width: 40%;
+}
+
+.bmi-table h3 {
+    font-size: 1.8rem;
+    font-weight: 800;
+    color: rgb(255, 255, 255);
+    padding: 2rem 0;
+}
+
+.bmi-table table {
+    width: 70%;
+}
+
+.bmi-table th,
+td {
+    border: 1px solid rgb(104, 99, 99);
+    line-height: 2.5rem;
+
+
+}
+
+.bmi-input {
+    width: 60%;
+}
+
+.input {
+    width: 46%;
+    border-radius: .7rem;
+    padding: .6rem;
+    border: none;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.input-line-1{
+    margin-top: 2rem;
+}
+
+.input-line-2{
+    margin: .8rem 0;
+    position: relative;
+}
+
+
+.bmi-input h3 {
+    font-size: 1.8rem;
+    font-weight: 800;
+    color: rgb(255, 255, 255);
+    padding-top: 2rem;
+}
+.select-1{
+    width: 49%;
+    border-radius: .7rem;
+    padding: .6rem;
+    border: none;
+    background: rgba(255, 255, 255, 0.1);
+}
+.select-2{
+    width: 99%;
+    border-radius: .7rem;
+    padding: .6rem;
+    border: none;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.bmi-btn{
+    margin: 2rem 0;
+}
+
+
 
 /* meet feature styles  */
 .meet-feature {
@@ -278,50 +363,59 @@ a:hover {
 
 
 /* footer section style  */
-footer{
+footer {
     background: rgba(255, 255, 255, 0.1);
 }
-.footer-container{
+
+.footer-container {
     max-width: 1080px;
     margin: 3rem auto;
     display: flex;
     justify-content: space-between;
     padding-top: 3rem;
 }
-.footer-content{
+
+.footer-content {
     width: 50%;
 }
-.footer-content h1{
+
+.footer-content h1 {
     color: rgb(230, 83, 60);
     font-weight: 800;
     font-size: 3.5rem;
     font-style: italic;
 }
-.footer-content p{
+
+.footer-content p {
     line-height: 1.5rem;
 }
-.menu-container{
+
+.menu-container {
     width: 50%;
     display: flex;
     justify-content: space-between;
 }
-.menu-title{
+
+.menu-title {
     font-size: 1.5rem;
     font-weight: 700;
     color: rgb(255, 255, 255);
 }
-.menu-container ul{
-    padding-top: 2rem; 
+
+.menu-container ul {
+    padding-top: 2rem;
 }
-.menu-container ul li{
+
+.menu-container ul li {
     list-style: none;
     color: rgba(255, 255, 255, 0.4);
     font-weight: 600;
     font-size: 1.2rem;
-    line-height:  2rem;
-   
+    line-height: 2rem;
+
 }
-.disclaimer{
+
+.disclaimer {
     max-width: 1080px;
     margin: 0 auto;
     padding: 1.5rem;
@@ -340,13 +434,13 @@ footer{
         display: none;
     }
 
-    .bennar{
+    .bennar {
         flex-direction: column;
         gap: 1rem;
     }
 
 
-    .crad-container  {
+    .crad-container {
         grid-template-columns: repeat(1, 1fr);
         gap: .5rem;
     }
@@ -389,22 +483,37 @@ footer{
     .tainer-img-container {
         grid-template-columns: repeat(1, 1fr);
     }
+
     .tainer-img img {
         width: 100%;
-        
+
         /* height: 18rem; */
         /* border-radius: 1.1rem; */
     }
 
-    .footer-container{
+    .footer-container {
         flex-direction: column;
         gap: 2rem;
         width: 100%;
         /* padding: .2rem; */
     }
-    .menu-container{
+
+    .menu-container {
         flex-direction: column;
         gap: 1rem;
         width: 100%;
+    }
+
+    .bmi-container {
+        flex-direction: column;
+    }
+    .bmi-input {
+        width: 100%;
+    }
+    .bmi-table {
+        width: 100%;
+    }
+    .input{
+        width: 44%;
     }
 }
